# mai_oop_cpp_task_1

./: CMakeLists.txt  README.md  main.cpp
include/: TimeConverter.hpp
src/: time_converter.cpp
test/: test_time_converter.cpp
